config-root/namespaces/jx-staging/demo301/demo301-demo301-deploy.yaml
# Source: demo301/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo301-demo301
  labels:
    draft: draft-app
    chart: "demo301-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-staging
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: demo301-demo301
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: demo301-demo301
    spec:
      containers:
        - name: demo301
          image: "gcr.io/jenkins-x-labs-bdd/demo301:0.0.1"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
