config-root/namespaces/jx-staging/demo301/demo301-svc.yaml
# Source: demo301/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo301
  labels:
    chart: "demo301-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    fabric8.io/expose: "true"
    fabric8.io/ingress.annotations: 'kubernetes.io/ingress.class: nginx'
  namespace: jx-staging
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: demo301-demo301
