config-root/namespaces/jx-staging/demo301/demo301-ingress.yaml
# Source: demo301/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: demo301
  namespace: jx-staging
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: demo301
              servicePort: 80
      host: demo301-jx-staging.34.66.77.190.nip.io
